# pot-head

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: FEATURES.md  design-spec.md
examples/filtering/: Cargo.toml  README.md
examples/filtering/src/: main.rs
examples/interactive/: Cargo.toml
examples/interactive/src/: app_state.rs  color_scheme.rs  main.rs  pot_adapter.rs  pot_display.rs  pot_spec.rs  renderable_pot.rs  rendering.rs
scripts/: cleanup.sh  format.sh
src/: config.rs  curves.rs  grab_mode.rs  hysteresis.rs  lib.rs  pothead.rs  snap_zones.rs  state.rs
src/filters/: ema.rs  mod.rs  moving_avg.rs
tests/: config_validation.rs  curves.rs  curves_integration.rs  filtering_integration.rs  filters_test.rs  grab_mode_tests.rs  hysteresis_integration.rs  hysteresis_unit.rs  normalization.rs  snap_zones_integration.rs
