[package]
name = "pot-head"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/HybridChild/pot-head"
keywords = ["embedded", "potmeter", "pot", "no-std"]
categories = ["embedded", "no-std"]
exclude = ["examples/"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
libm = { version = "0.2", optional = true }
heapless = { version = "0.9.2", optional = true }

[features]
default = ["hysteresis-threshold", "filter-ema", "grab-mode"]
hysteresis-threshold = []
hysteresis-schmitt = []
log-curve = ["libm"]
filter-ema = []
filter-moving-avg = ["heapless"]
snap-zone-snap = []
snap-zone-dead = []
# Grab mode adds ~24-40 bytes per PotHead instance (depends on output type)
# Disable if you don't need Pickup/PassThrough modes for preset/automation handling
grab-mode = []
