[package]
name = "pot-head"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/HybridChild/pot-head"
keywords = ["embedded", "potmeter", "pot", "no-std"]
categories = ["embedded", "no-std"]
exclude = ["examples/"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
libm = { version = "0.2", optional = true }
heapless = { version = "0.9.2", optional = true }

[features]
default = ["std-math", "grab-mode"]
# Enables logarithmic response curves via libm
std-math = ["libm"]
# Enables moving average filter (requires heapless buffer)
moving-average = ["heapless"]
# Enables grab modes (Pickup/PassThrough) for preset/automation handling
# Adds ~24-40 bytes per PotHead instance depending on output type
grab-mode = []
